# elos-audit-scanner

./: CMakeLists.txt  LICENSE  README.md  audit.json
src/: audit.c  audit.h  auditd.c  auditd.h  elos_audit_plugin.c  netlink_test.c
